Resolve button contrast issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -235,7 +235,7 @@ main .section.contact .button-container a {
   font-weight: 700;
   border-radius: 5px;
   padding: 0.75rem 1rem; 
-  color: var(--color-white);
+  color: var(--color-black);
   width: fit-content;
   background-color: rgba(255, 142, 47, 1);
   border: 1px solid transparent;
